--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_GOOGLE_API_KEY=AIzaSyD4NiE8pZJoFl3oQnNH34vovJEpHX2CO8U
+VITE_GOOGLE_API_KEY=your-gemini-api-key
+VITE_BACKEND_URL=https://vyapyaarai-deploy.onrender.com
 
